Fri Jul 22 09:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          Fixed compile errors with Borland

        * tao/Valuetype/ValueBase.{h,cpp}:
          Use Atomic_Op for the refcount, initialize the refcount to 1 in
          the copy constructor.

Thu Jul 21 15:07:33 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/FTRT_Event_Service/Factory_Service/Makefile.am:
	* orbsvcs/FT_ReplicationManager/Makefile.am:
	* orbsvcs/Fault_Detector/Makefile.am:
	* orbsvcs/Fault_Notifier/Makefile.am:
	* orbsvcs/LifeCycle_Service/Makefile.am:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Makefile.am:
	* orbsvcs/Naming_Service/Makefile.am:
	* orbsvcs/Notify_Service/Makefile.am:

	  Regenerated.

Thu Jul 21 08:29:13 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/LogMgr_i.cpp:

	  Fix typo in last change.

Thu Jul 21 07:42:40 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/LogMgr_i.cpp:

	  Don't set the servant retention policy when creating the log POA
	  in minimum CORBA builds.

Thu Jul 21 07:26:27 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbscvs/orbsvcs/Hash_LogStore.cpp:
	* orbsvcs/orbsvcs/Hash_LogRecordStore.cpp:

          Use ACE_SYNCH_RW_MUTEX instead of ACE_RW_Thread_Mutex to fix
	  single threaded builds.

Thu Jul 21 14:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Valuebox/client.cpp:
          Fixed problem with emulated exceptions

Thu Jul 21 13:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
          Fixed compile error with Borland

Thu Jul 21 07:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Event_Manager.h:
        * orbsvcs/orbsvcs/Log/Hash_LogStore.{h,cpp}:
          Fixed problem with emulated exceptions

Thu Jul 21 06:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
